# daily-open-picture

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  vercel.json
public/: styles.css
templates/: index.html
tests/: test_app.py
